# triedb

./: .gitignore  Cargo.toml  Makefile  README.md  run.sh  rustfmt.toml
.buildkite/: pipeline.yml
.github/workflows/: miri.yml  pr.yml  test.yml
benches/: benchmark_common.rs  crud_benchmarks.rs  database_benchmarks.rs  db_new_benchmarks.rs  hashmap_benchmarks.rs  nibblesmap_benchmarks.rs  proof_benchmarks.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs
examples/insert/: Cargo.toml  main.rs
examples/insert/src/: main.rs
examples/read/: main.rs
examples/seed/: main.rs
examples/seed-to-benchmark/: main.rs
explorer/: .gitignore  Cargo.toml
explorer/frontend/: index.html  package-lock.json  package.json
explorer/frontend/src/: App.tsx
explorer/frontend/src/api/: client.ts
explorer/frontend/src/components/: MetadataModal.tsx  NodeComponent.tsx  PageContainer.tsx  SearchBar.tsx  TreeNodeComponent.tsx
explorer/frontend/src/hooks/: useTrieData.ts
explorer/frontend/src/styles/: index.css
explorer/frontend/src/types/: index.ts
explorer/frontend/src/utils/: treeBuilder.ts
explorer/src/: main.rs  models.rs  state.rs
explorer/src/handlers/: metadata.rs  mod.rs  nodes.rs  pages.rs  search.rs
src/: account.rs  batch.rs  branch.rs  cache.rs  config.rs  context.rs  database.rs  lib.rs  location.rs  logger.rs  main.rs  metrics.rs  node.rs  nodes.rs  overlay.rs  page.rs  page_manager.rs  path.rs  pointer.rs  rlp.rs  snapshot.rs  storage.rs  transaction.rs  value.rs
src/config/: cache.rs  logger.rs  metrics.rs  mod.rs
src/executor/: futures.rs  inline.rs  mod.rs  never.rs  threadpool.rs  traits.rs
src/meta/: error.rs  mod.rs
src/node/: arbitrary.rs  encoding.rs  mod.rs  rlp.rs  tests.rs
src/nodes/: branch.rs  leaf.rs  reference.rs
src/page/: manager.rs  orphan.rs  orphan_list.rs  page.rs  root.rs  slotted_page.rs  state.rs  subtrie_page.rs
src/page/manager/: buffer_pool.rs  cache_evict.rs  clock_replacer.rs  dirty.rs  fmap.rs  frame.rs  mmap.rs  options.rs  orphan_aware.rs  syncer.rs
src/page/slotted_page/: cell_pointer.rs
src/storage/: cursor.rs  debug.rs  deferred_changes.rs  engine.rs  explorer.rs  hash_tracker.rs  overlay_root.rs  overlay_root_iterative.rs  parallel_hasher.rs  proof.rs  proofs.rs  test_common.rs  test_utils.rs  value.rs
src/storage/engine/: error.rs  handlers.rs  helpers.rs  mod.rs  page_ops.rs  read.rs  tests.rs  write.rs
src/transaction/: cursor.rs  error.rs  manager.rs
src/value/: account.rs  storage.rs
tests/: ethereum_execution_spec.rs
tst/: Cargo.toml
tst/src/: main.rs
