[package]
name = "triedb"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.8.21", features = ["arbitrary", "rand"] }
alloy-rlp = "0.3.11"
alloy-trie = { version = "0.7.6", features = ["arbitrary", "ethereum"] }
arrayvec = "0.7.6"
memmap2 = "0.9.5"
proptest = "1.6.0"
proptest-derive = "0.5.1"
sealed = "0.6.0"
metrics-derive = "0.1.0"
metrics = "0.24.1"
zerocopy = { version = "0.8.24", features = ["derive"] }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.8" }
parking_lot = { version = "0.12.3", features = ["send_guard"] }
fxhash = "0.2.1"
static_assertions = "1.1.0"

[dev-dependencies]
criterion = "0.5"
tempdir = "0.3.7"
rand = "0.8.5"
walkdir = "2"
serde_json = "1.0.140"
tempfile = "3.19.1"

[lib]
bench = false

[[bench]]
name = "database_benchmarks"
harness = false

[[bench]]
name = "crud_benchmarks"
harness = false

[[bench]]
name = "proof_benchmarks"
harness = false

[profile.bench]
debug = false
opt-level = 3
