[package]
name = "triedb"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "1.2.1", features = ["arbitrary", "rand"] }
alloy-rlp = "0.3.12"
alloy-trie = { version = "0.8.1", features = ["arbitrary", "ethereum"] }
arrayvec = "0.7.6"
memmap2 = "0.9.5"
proptest = "1.7.0"
proptest-derive = "0.6.0"
sealed = "0.6.0"
metrics-derive = "0.1.0"
metrics = "0.24.2"
zerocopy = { version = "0.8.24", features = ["derive"] }
parking_lot = { version = "0.12.4", features = ["send_guard"] }
fxhash = "0.2.1"
static_assertions = "1.1.0"
rayon = "1.10.0"
evict = "0.3.1"
dashmap = "6.1.0"
libc = "0.2.174"

[features]
default = ["mmap_backend"]
buffer_pool_backend = []
mmap_backend = []

[dev-dependencies]
criterion = "0.6.0"
tempdir = "0.3.7"
rand = "0.9.1"
walkdir = "2"
serde_json = "1.0.140"
tempfile = "3.19.1"

[lib]
bench = false

[[bench]]
name = "crud_benchmarks"
harness = false

[[bench]]
name = "proof_benchmarks"
harness = false

[profile.bench]
debug = false
opt-level = 3
