[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
triedb = { path = ".." }
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
alloy-trie = { version = "0.9.1", default-features = false, features = ["arbitrary", "ethereum"] }
alloy-primitives = { version = "1.4.1", default-features = false, features = ["arbitrary", "rand"] }

[[bin]]
name = "cli"
path = "src/main.rs"

