[package]
name = "triedb-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
triedb = { path = ".." }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
alloy-primitives = { version = "1.2.1", features = ["serde"] }
alloy-trie = { version = "0.8.1", features = ["serde"] }
parking_lot = "0.12"
include_dir = "0.7"
mime_guess = "2"

[[bin]]
name = "triedb-explorer"
path = "src/main.rs"
